<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:ignore="LabelFor" >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/prompt" android:textColor="@color/purple_700"
            android:textSize="20sp" app:layout_constraintVertical_bias="0.01999998"/>
    <Button
            android:text="@string/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/find"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.06999999" app:layout_constraintEnd_toStartOf="@+id/input"
            android:onClick="findButton"/>
    <Button
            android:text="@string/new_word"
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/new_word"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.88"
            android:onClick="newWordButton" android:layout_marginRight="32dp" android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <Button
            android:text="@string/remove"
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/remove"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.120000005" app:layout_constraintTop_toBottomOf="@+id/new_word"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp" android:onClick="removeButton"/>
    <EditText
            android:text=""
            android:background="@color/text_background_blue"
            android:layout_width="0dp"
            android:layout_height="45dp" android:id="@+id/input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.06999999"
            app:layout_constraintStart_toEndOf="@+id/frequent_word_one" app:layout_constraintHorizontal_bias="0.35"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:autofillHints="@string/word"
            android:inputType="textCapSentences"/>
    <TextView
            android:text="@string/frq_word_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/frequent_word_one"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.04000002" app:layout_constraintTop_toBottomOf="@+id/input"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.04"/>
    <TextView
            android:text="@string/frq_word_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/frequent_word_two"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.04000002"
            app:layout_constraintTop_toBottomOf="@+id/frequent_field_one"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.04"/>
    <TextView
            android:text="@string/frq_word_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/frequent_word_three"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.04000002"
            app:layout_constraintTop_toBottomOf="@+id/frequent_field_two"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.04"/>
    <TextView
            android:text=""
            android:background="@color/text_background_gray"
            android:layout_width="0dp"
            android:layout_height="40dp" android:id="@+id/frequent_field_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input" app:layout_constraintVertical_bias="0.01999998"
            app:layout_constraintStart_toEndOf="@+id/frequent_word_one" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text=""
            android:background="@color/text_background_gray"
            android:layout_width="0dp"
            android:layout_height="40dp" android:id="@+id/frequent_field_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequent_field_one"
            app:layout_constraintVertical_bias="0.01999998"
            app:layout_constraintStart_toEndOf="@+id/frequent_word_one" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text=""
            android:background="@color/text_background_gray"
            android:layout_width="0dp"
            android:layout_height="40dp" android:id="@+id/frequent_field_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequent_field_two"
            app:layout_constraintVertical_bias="0.01999998"
            app:layout_constraintStart_toEndOf="@+id/frequent_word_one" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text=""
            android:background="@color/text_background_gray"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequent_field_three"
            app:layout_constraintBottom_toTopOf="@+id/new_word"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>