<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewWordActivity"
        tools:ignore="LabelFor" >

    <Button
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/add"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.81"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginRight="32dp" android:layout_marginEnd="32dp"
            android:onClick="addButton"/>
    <Button
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/clear"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.050000012"
            app:layout_constraintTop_toBottomOf="@+id/add"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="clearButton"/>
    <Button
            android:text="@string/home_page"
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/home_page"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.050000012"
            app:layout_constraintTop_toBottomOf="@+id/clear"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp" android:onClick="homePageButton"/>
    <TextView
            android:text="@string/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/word"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.01999998" app:layout_constraintTop_toTopOf="@+id/new_word_input"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"/>
    <TextView
            android:text="@string/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/frequency"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.01999998" app:layout_constraintTop_toTopOf="@+id/frequency_input"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"/>
    <TextView
            android:text="@string/meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/meaning"
            app:layout_constraintEnd_toStartOf="@+id/new_word_input"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.099" app:layout_constraintTop_toTopOf="@+id/frequency_input"
            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.512"/>
    <EditText
            android:text=""
            android:background="@color/text_background_blue"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meaning"
            app:layout_constraintBottom_toTopOf="@+id/add"
            android:layout_marginBottom="8dp" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:autofillHints="@string/meaning"
            android:scrollHorizontally="false"
            android:gravity="top|start"
            android:inputType="text|textMultiLine"/>
    <EditText
            android:text=""
            android:background="@color/text_background_blue"
            android:layout_width="0dp"
            android:layout_height="45dp" android:id="@+id/new_word_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.032"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/frequency" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:autofillHints="@string/word"
            android:inputType="textCapSentences"/>
    <EditText
            android:text=""
            android:background="@color/text_background_blue"
            android:layout_width="0dp"
            android:layout_height="45dp" android:id="@+id/frequency_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.01999998"
            app:layout_constraintTop_toBottomOf="@+id/new_word_input" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/frequency"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:autofillHints="@string/frequency"
            android:inputType="number"/>
</androidx.constraintlayout.widget.ConstraintLayout>